Cram retriever built

--- a/Retriever.ipynb
+++ b/Retriever.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "73679c20",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -15,7 +19,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "0990e24a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def bam_to_df(bam, chr = None, start=None, stop = None):\n",
@@ -33,7 +41,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "05427811",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "f = open(\"HG00138_chr20_subset.sam\", \"r\")\n",
@@ -44,7 +56,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "c4f0f10f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "DNA_Output = ''\n",
@@ -58,7 +74,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "9f0b1dc9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -79,7 +99,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "340c79c1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from collections import Counter"
@@ -89,7 +113,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "7c388267",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "count = Counter(DNA_Output)"
@@ -99,7 +127,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "4397fa3a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -120,7 +152,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "8c25ea4b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "DNA_Output_withoutN = DNA_Output.replace(\"N\", \"\")\n",
@@ -132,7 +168,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "63bd2ef2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "Output_file = open(\"Output_Raw.txt\", \"a\")"
@@ -142,7 +182,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "beb4dea5",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -163,7 +207,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "ee7944f5",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "for i in range(0, (len(DNA_Output_withoutN) // 4) * 4, 4):\n",
@@ -178,7 +226,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "7b4cabc1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -203,7 +255,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "e98dc441",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def decode(char):\n",
@@ -223,7 +279,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "25b2d648",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "Reverse_file = open('Output_Raw.txt', 'r')\n",
@@ -243,7 +303,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "694c6f80",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "DNA_Output_1234 = DNA_Output_withoutN.replace('A', '1')\n",
@@ -256,7 +320,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "2ff0a45e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "Output_file_1234 = open(\"Output_Raw_1234.txt\", \"a\")"
@@ -266,7 +334,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "4c01ed82",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "Output_file_1234.write(DNA_Output_1234)\n",
@@ -277,7 +349,11 @@
    "cell_type": "code",
    "execution_count": 58,
    "id": "292928cc",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -298,7 +374,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4a32a654",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -306,7 +386,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4c53fc93",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -314,7 +398,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6c603439",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -322,7 +410,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "74c9c8cf",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "Test = f.readlines()\n"
@@ -332,7 +424,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "705cf003",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -354,7 +450,11 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "eda90a72",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -395,7 +495,11 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "980d0727",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "test = l.split()"
@@ -405,7 +509,11 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "6a4360dd",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -426,7 +534,11 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "462a4e01",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -447,7 +559,11 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "e0275639",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "ORD = [ord(test[10][i]) for i in range(len(test[10]))]"
@@ -457,7 +573,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "34bcf165",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "l400 = Lines[400]\n",
@@ -468,7 +588,11 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "b0d1ede1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "l400 = l400.split()\n",
@@ -479,7 +603,11 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "1eaf0e23",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "ORD400 = [ord(l400[10][i]) for i in range(len(l400[10]))]\n",
@@ -490,7 +618,11 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "e5318ff1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -514,7 +646,11 @@
    "cell_type": "code",
    "execution_count": 26,
    "id": "c2eba73b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "ORD400_32 = [i - 32 for i in ORD400] "
@@ -524,7 +660,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0298577a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -532,7 +672,11 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "90676270",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "f_q = open(\"HG00138_chr20_subset.sam\", \"r\")\n",
@@ -549,7 +693,11 @@
    "cell_type": "code",
    "execution_count": 27,
    "id": "e5720250",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "Output_Raw_q = open(\"Output_Raw_q.txt\", \"a\")\n",
@@ -561,7 +709,11 @@
    "cell_type": "code",
    "execution_count": 28,
    "id": "91664373",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -582,7 +734,11 @@
    "cell_type": "code",
    "execution_count": 30,
    "id": "e7506bdd",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -603,7 +759,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e2beb65c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def subtract_31(char):\n",
@@ -618,7 +778,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "33dfbb8c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "file_path = \"binFile.bin\"\n",
@@ -632,7 +796,11 @@
    "cell_type": "code",
    "execution_count": 43,
    "id": "1986c908",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "file_path = \"binFile.bin\"\n",
@@ -651,7 +819,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "62673755",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -659,7 +831,11 @@
    "cell_type": "code",
    "execution_count": 40,
    "id": "e563410c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "f = open(\"HG00138_chr20_subset.sam\", \"r\")\n",
@@ -670,7 +846,11 @@
    "cell_type": "code",
    "execution_count": 44,
    "id": "32920698",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "file_path = open(\"binFile.bin\", \"rb\")\n",
@@ -681,7 +861,11 @@
    "cell_type": "code",
    "execution_count": 42,
    "id": "ac4da3d5",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -700,7 +884,11 @@
    "cell_type": "code",
    "execution_count": 45,
    "id": "86b996d9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -721,7 +909,11 @@
    "cell_type": "code",
    "execution_count": 47,
    "id": "a7281dd5",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -742,7 +934,11 @@
    "cell_type": "code",
    "execution_count": 48,
    "id": "74c8ef80",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def subtract_31(char):\n",
@@ -767,7 +963,11 @@
    "cell_type": "code",
    "execution_count": 49,
    "id": "a5f231bc",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -788,7 +988,11 @@
    "cell_type": "code",
    "execution_count": 51,
    "id": "da97df0c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def string_to_bytearray(input_string):\n",
@@ -800,7 +1004,11 @@
    "cell_type": "code",
    "execution_count": 52,
    "id": "27e8f5d1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def write_bytearray_to_file(file_path, byte_array):\n",
@@ -816,7 +1024,11 @@
    "cell_type": "code",
    "execution_count": 53,
    "id": "08d2e817",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -834,7 +1046,11 @@
    "cell_type": "code",
    "execution_count": 59,
    "id": "69beb131",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "file_path = open(\"/Users/taolueyang/DNA_Compression/SZ/binFile.bin\", \"rb\")\n",
@@ -845,7 +1061,11 @@
    "cell_type": "code",
    "execution_count": 69,
    "id": "2dc53d6f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -866,7 +1086,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "86c2d38b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "file_path = open(\"/Users/taolueyang/DNA_Compression/SZ/binFile.bin\", \"rb\")\n",
@@ -877,7 +1101,11 @@
    "cell_type": "code",
    "execution_count": 63,
    "id": "585be18b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "binary_data = bytearray([32, 33, 34, 35, 36, 37])  "
@@ -887,7 +1115,11 @@
    "cell_type": "code",
    "execution_count": 64,
    "id": "0042a42b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -908,7 +1140,11 @@
    "cell_type": "code",
    "execution_count": 65,
    "id": "591a9495",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def write_ascii_values_to_file(file_path, input_string):\n",
@@ -930,7 +1166,11 @@
    "cell_type": "code",
    "execution_count": 68,
    "id": "80cbb2dc",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -948,7 +1188,11 @@
    "cell_type": "code",
    "execution_count": 70,
    "id": "eb9277bd",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -970,7 +1214,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "1b5a20b9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -993,7 +1241,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e0fe5692",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
